[tool.poetry]
name = "typer-di"
version = "0.1.2"
description = "Extension for `typer` for dependency injection like in FastAPI"
authors = ["Evgeniy A. Cymbalyuk <cimbaluk@gmail.com>"]
readme = "README.md"
license = "LICENCE.txt"

packages = [{ include = "typer_di", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
icecream = ">=2.1.3"
mypy = ">=1.4.1"

[tool.pytest.ini_options]
addopts = ["--cov=.", "--cov-report=term", "--cov-report=xml"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
skip_empty = true
skip_covered = true
sort = "cover"
exclude_lines = ["if TYPE_CHECKING:", "\\.\\.\\.", "# pragma: no cover"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
mypy_path = "src"
packages = "typer_di"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
